docker : update remote deployment

--- a/frontend/src/components/layouts/AuthLayout/Auth.module.scss
+++ b/frontend/src/components/layouts/AuthLayout/Auth.module.scss
@@ -8,6 +8,12 @@
   box-sizing: border-box;
 }
 
+.lottie{
+  height: 100px;
+  width:fit-content;
+  // border-radius: 100px;
+}
+
 .splitLayout {
   flex: 1;
   display: flex;
