--- a/frontend/src/components/common/PageTitle/PageTitle.module.scss
+++ b/frontend/src/components/common/PageTitle/PageTitle.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/mixins.scss";
+@use "../../../styles/mixins.scss";
 
 .container {
   margin-bottom: var(--tk-spacing-md);
@@ -8,7 +8,7 @@
   margin-bottom: 0.5rem !important;
   margin-top: 0;
 
-  @include respond-below(md) {
+  @include mixins.respond-below(md) {
     font-size: 25px !important;
   }
 }
