--- a/frontend/src/components/common/ScrollContainer/ScrollContainer.module.scss
+++ b/frontend/src/components/common/ScrollContainer/ScrollContainer.module.scss
@@ -1,9 +1,9 @@
-@import "../../../styles/mixins";
+@use "../../../styles/mixins";
 
 .container {
   width: 100%;
   overflow-x: auto;
   box-sizing: border-box;
 
-  @include scrollbar;
+  @include mixins.scrollbar;
 }
