--- a/frontend/src/components/common/StatBoxes/StatBoxes.module.scss
+++ b/frontend/src/components/common/StatBoxes/StatBoxes.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/mixins.scss";
+@use "../../../styles/mixins.scss";
 
 .statistics {
   display: grid;
@@ -7,11 +7,11 @@
   color: var(--tk-primary);
   margin: 0.5rem 0;
 
-  @include respond-below(lg) {
+  @include mixins.respond-below(lg) {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  @include respond-below(md) {
+  @include mixins.respond-below(md) {
     grid-template-columns: 1fr;
   }
 }
@@ -43,7 +43,7 @@
       line-height: 1.2;
       align-self: end;
 
-      @include respond-below(md) {
+      @include mixins.respond-below(md) {
         font-size: 1.5rem;
       }
     }
@@ -70,7 +70,7 @@
       color: #ffffff;
       transition: transform 0.2s ease;
 
-      @include respond-below(md) {
+      @include mixins.respond-below(md) {
         width: 36px;
         height: 36px;
         border-radius: 10px;
@@ -82,7 +82,7 @@
     }
   }
 
-  @include respond-below(sm) {
+  @include mixins.respond-below(sm) {
     padding: 1rem !important;
 
     .leftPanel {
