--- a/frontend/src/components/common/Table/Table.module.scss
+++ b/frontend/src/components/common/Table/Table.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/mixins";
+@use "../../../styles/mixins";
 
 .tableHead {
   white-space: nowrap;
@@ -20,7 +20,9 @@
 }
 
 .table {
-  tr td, tr, th {
+  tr td,
+  tr,
+  th {
     padding: 15px !important;
     white-space: nowrap;
   }
