--- a/frontend/src/components/common/ReportTable/ReportTable.module.scss
+++ b/frontend/src/components/common/ReportTable/ReportTable.module.scss
@@ -1,7 +1,9 @@
-@import "../../../styles/mixins.scss";
+@use "../../../styles/mixins.scss";
 
-.periodSelect, .datePicker, .downloadButton {
-  @include respond-below(sm) {
+.periodSelect,
+.datePicker,
+.downloadButton {
+  @include mixins.respond-below(sm) {
     width: 100%;
   }
 }
