--- a/frontend/src/components/common/ToolBar/ToolBar.module.scss
+++ b/frontend/src/components/common/ToolBar/ToolBar.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/mixins";
+@use "../../../styles/mixins";
 
 .card {
   container-type: inline-size;
@@ -10,7 +10,7 @@
     align-items: center;
     place-content: space-between;
 
-    @include respond-below(sm, true) {
+    @include mixins.respond-below(sm, true) {
       flex-direction: column;
       align-items: flex-start;
       width: 100%;
@@ -29,7 +29,7 @@
       align-items: center;
       place-self: flex-end;
 
-      @include respond-below(sm, true) {
+      @include mixins.respond-below(sm, true) {
         width: 100%;
         justify-content: flex-end;
       }
