--- a/frontend/src/components/layouts/Checkout/Checkout.module.scss
+++ b/frontend/src/components/layouts/Checkout/Checkout.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/mixins";
+@use "../../../styles/mixins";
 
 .container {
   display: flex;
@@ -6,7 +6,7 @@
   height: 100vh;
 
   .sidebar {
-    @include respond-below(md) {
+    @include mixins.respond-below(md) {
       display: none;
     }
   }
@@ -20,7 +20,7 @@
   }
 
   .subTitle {
-    font-size: .95em;
+    font-size: 0.95em;
     margin-top: 10px;
   }
 
@@ -59,11 +59,10 @@
         white-space: nowrap;
         text-overflow: ellipsis;
 
-        @include respond-below(md) {
+        @include mixins.respond-below(md) {
           width: calc(100vw - 60px);
           font-size: 1em;
         }
-
       }
     }
 
@@ -72,9 +71,9 @@
       height: calc(100vh - 90px);
       overflow-y: auto;
       padding: 20px 60px;
-      @include scrollbar();
+      @include mixins.scrollbar();
 
-      @include respond-below(md) {
+      @include mixins.respond-below(md) {
         padding: 20px;
       }
 
