--- a/frontend/src/components/routes/event/GettingStarted/GettingStarted.module.scss
+++ b/frontend/src/components/routes/event/GettingStarted/GettingStarted.module.scss
@@ -1,10 +1,12 @@
-@import "../../../../styles/mixins.scss";
+@use "../../../../styles/mixins.scss";
 
 .headerCard {
-  background-image: url('/images/balloons.svg'), linear-gradient(358deg, #eee5ff, white);
+  background-image: url("/images/balloons.svg"), linear-gradient(358deg, #eee5ff, white);
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: 95% 30px, 0 0;
+  background-position:
+    95% 30px,
+    0 0;
   box-shadow: none !important;
   padding: 30px;
 
@@ -12,7 +14,7 @@
     margin-bottom: 0px;
   }
 
-  @include respond-below(sm) {
+  @include mixins.respond-below(sm) {
     background-image: linear-gradient(358deg, #eee5ff, white);
   }
 }
@@ -24,14 +26,14 @@
   flex-wrap: wrap;
   justify-content: space-between;
 
-  @include respond-below(sm) {
+  @include mixins.respond-below(sm) {
     flex-direction: column;
   }
 
   & div {
     margin-bottom: 0px;
     width: calc(50% - 10px);
-    @include respond-below(sm) {
+    @include mixins.respond-below(sm) {
       width: 100%;
     }
   }
