Style: Make ticket QR code larger

--- a/frontend/src/components/common/AttendeeTicket/AttendeeTicket.module.scss
+++ b/frontend/src/components/common/AttendeeTicket/AttendeeTicket.module.scss
@@ -97,8 +97,15 @@
 
     .qrImage {
       svg {
-        width: 140px;
-        height: 140px;
+        width: 180px;
+        height: 180px;
+      }
+
+      @media print {
+        svg {
+          width: 220px;
+          height: 220px;
+        }
       }
 
       .cancelled {
