--- a/frontend/src/components/routes/event/GettingStarted/GettingStarted.module.scss
+++ b/frontend/src/components/routes/event/GettingStarted/GettingStarted.module.scss
@@ -25,7 +25,7 @@
     z-index: 0;
   }
 
-  @include mixins.respond-below(sm) {
+  @include mixins.respond-below(lg) {
     &::before {
       display: none;
     }
